# ifpdf

./: .gitignore  PRD.md  README.md  pyproject.toml
src/ifpdf/: __init__.py  __main__.py  chunker.py  cli.py  extractor.py  formatter.py  layout.py  metadata.py  ocr_engine.py  pagemap.py  preprocessor.py  utils.py
src/ifpdf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_chunker.py  test_layout.py  test_metadata.py  test_pagemap.py  test_preprocessor.py  test_utils.py
